--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,54 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     color: #666;
-    line-height: 150%;
     font-size: 16px;
     background-color:aliceblue;
-    padding: 30px 0px;
+    padding: 0;
+    margin: 0;
+}
+
+p{
+    line-height: 1.5em;
+}
+
+#hero{
+    display: flex;
+    flex-flow: column wrap;
+    height: 100vh;
+    background-color:black;
+}
+
+header{
+    display: flex;
+    flex-grow: 1;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+header div{
+    width: 80%;
+    text-align: center;
+    padding: 0 10%;
+}
+#headerimg img{
+    border-radius: 50%;
+    width:20%;
+    min-width: 150px;
+    margin: 0 auto 20px;
+}
+
+nav{
+    background-color: #666;
+    width:100%;
+    align-self: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+nav div{
+    margin: 10px 15px;
 }
 
 #wrapper{
@@ -14,29 +58,14 @@ body{
     padding: 75px 30px;
 }
 
-header{
-    display: flex;
-}
-
-#headerimg{
-    width:20%;
-}
-
-#headerimg img{
-    border-radius: 50%;
-    width: 100%;
-}
-
-#headertxt{
-    width:80%;
-    padding-right: 30px;
-}
 
 h1{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 3em;
+    font-weight: lighter;
+    font-size: 3.5em;
+    line-height: 1.5em;
     color:darkolivegreen;
-    margin:15px 0;
+    margin:0 0 -20px;
 }
 
 main{
