--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Molle:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    color: #666;
-    font-size: 16px;
-    background-color:aliceblue;
+    font-family: Outfit, Arial, Helvetica, sans-serif;
+    color: #171723;
+    font-weight: 300;
+    font-size: 18px;
+    background-color:#81637f;
     padding: 0;
     margin: 0;
 }
@@ -15,7 +19,12 @@ p{
     display: flex;
     flex-flow: column wrap;
     height: 100vh;
-    background-color:black;
+    background-color:#171723;
+}
+
+#hero p{
+    color: #fab261;
+    font-weight: 100;
 }
 
 header{
@@ -32,13 +41,14 @@ header div{
 }
 #headerimg img{
     border-radius: 50%;
-    width:20%;
+    width:15%;
     min-width: 150px;
-    margin: 0 auto 20px;
+    margin: 0 auto;
+    border: solid 6px #d67867;
 }
 
 nav{
-    background-color: #666;
+    background-color: #4f344e;
     width:100%;
     align-self: flex-start;
     display: flex;
@@ -52,39 +62,65 @@ nav div{
 }
 
 #wrapper{
-    background-color: white;
     width: 60%;
-    margin:auto;
-    padding: 75px 30px;
+    margin:0 auto;
+    padding: 0 30px;
 }
 
 
 h1{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: lighter;
-    font-size: 3.5em;
-    line-height: 1.5em;
-    color:darkolivegreen;
-    margin:0 0 -20px;
+    font-weight: 200;
+    font-size: 4em;
+    line-height: 1em;
+    color:#965065;
+    margin:30px 0 -10px;
+}
+
+h2{
+    margin: 0 0 15px;
+}
+
+h3{
+    margin:0;
+    color:#4f344e;
+    font-size: 1.1em;
+    font-weight: 500;
+    padding-bottom: 3px;
 }
 
 main{
     margin: auto;
     display: flex;
+    flex-wrap: wrap;
 }
 
 section{
-    width: 70%;
+    width: 55%;
+    padding: 70px 5% 30px;
 }
 
 article{
     width:100%;
+    padding-bottom: 70px;
+}
+
+ul, ol{
+    margin:0;
+    padding: 0;
+}
+
+li::marker{
+    color:#b696b4;
+}
+
+li{
+    padding:5px 0 10px;
 }
 
 aside{
-    width:30%;
+    width:25%;
+    padding:70px 5%;
 }
-
 
 aside ol{
     width:100%;
@@ -95,27 +131,34 @@ aside ol{
 }
 
 aside li{
+    background-color: #b696b4;
     list-style: none;
-    padding: 10px 15px;
+    padding: 8px 15px;
     margin: 0 15px 15px 0;
-    border: #999 solid 1px;
-    border-radius: 15px;
-}
-
-.cv-section{
-    border: solid 1px #999;
-    padding: 20px 30px;
-    margin: 20px 0px;
-    text-align: left;
-}
-
-ul li {
-    color: darkgreen;
+    border: #4f344e solid 1px;
+    border-radius: 20px;
+    color: #4f344e;
+    font-weight: 500;
 }
 
 a{
-   color:crimson; 
+   color:#965065; 
+   text-decoration: none;
+   font-weight: 500;
 }
 a:hover{
-    color: chocolate;
+    color: #d67867;
+}
+
+.bolder{
+    font-weight: 700;
+}
+
+footer{
+    background-color: #4f344e;
+    width:100%;
+    text-align: center;
+    padding: 20px 0;
+    border-top: #d67867 solid 3px;
+    color: #b696b4;
 }
